# ai-agents-platform

./: .env.example  Makefile  README.md  main.py  pyproject.toml
docs/: SYSTEM_DESIGN.md
docs/adr/: 0001-build-agents-from-scratch.md  0002-checkpoint-and-resume-execution.md  0003-tool-registry-and-schema-design.md  0004-human-in-the-loop-transport.md
docs/high_level_design/: high_level_architecture.excalidraw
infrastructure/db/: 001_init.sql
infrastructure/docker/: docker-compose.infra.yml  prometheus.yml  traefik-dynamic.yml  traefix.yml
infrastructure/scripts/: init_db.sh  init_topics.sh
services/api/: pyproject.toml
services/api/src/: config.py  main.py  tracing.py
services/api/src/api/: dependencies.py  middleware.py
services/api/src/api/v1/routes/: auth.py  health.py
services/worker/: pyproject.toml
services/worker/src/: config.py  health.py  main.py  tracing.py
shared/: pyproject.toml
shared/src/agents_shared/: __init__.py
shared/src/agents_shared/auth/: __init__.py
shared/src/agents_shared/logging/: __init__.py
shared/src/agents_shared/models/: __init__.py  events.py  task.py
