[project]
name = "agents-shared"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.7",
    "python-jose[cryptography]>=3.3",
    "structlog>=24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents_shared"]