[project]
name = "agents-api-service"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "python-jose[cryptography]>=3.3",
    "prometheus-fastapi-instrumentator>=6.1",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-exporter-otlp-proto-grpc>1.24",
    "asyncpg>=0.29",
    "redis[asyncio]>=5.0",
    "aiokafka>=0.10",
    "agents-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
agents-shared = { workspace = true }